--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  width: 90%;
+  width: 100%;
   justify-content: stretch;
   align-items: stretch;
   background-color: grey;
@@ -55,8 +55,8 @@
   border-radius: 5px;
   background-color: lightgrey;
   margin: 5px;
-  padding: 5px;
-  width: 100px;
+  padding: 4px;
+  width: 26vw;
   transition: all 0.1s ease-in-out;
 }
 
