--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -78,3 +78,10 @@ a {
   color: inherit;
   text-decoration: inherit;
 }
+
+.button {
+  cursor: default;
+  border: 1px solid black;
+  padding: auto;
+  user-select: none;
+}
