--- a/src/components/Charts/chart.css
+++ b/src/components/Charts/chart.css
@@ -11,11 +11,28 @@ text {
   font-size: 0.5em;
 }
 
-.svg {
+.chartContainer {
   height: 50vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.svg {
+  height: 90%;
   width: 100%;
 }
 .container {
   height: 95%;
   width: 95%;
+}
+.chartControls {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 2%;
+}
+
+.chartControl {
+  cursor: default;
 }
