--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+html {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+
 body {
   height: 100vh;
   width: 100vw;
@@ -25,6 +31,7 @@ body {
   padding: 5px;
   border: 1px black solid;
   border-radius: 5px;
+  margin: 0 5px;
   margin-bottom: 5px;
 }
 
@@ -36,7 +43,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 8px;
+  padding: 5px 8px 0;
 }
 
 .footer {
@@ -59,10 +66,12 @@ body {
 .bio {
   color: #555555;
   border: unset;
+  padding: unset;
+  margin: 0 5px 8px;
 }
 
 .subtitle {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 /* Element Overrides */
